--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ span {
     font-size: 12px;
   }
   img {
+    top: 0px;
     width: 7vh;
     height: auto;
   }
@@ -85,6 +86,6 @@ span {
   }
 
   span {
-    font-size: 10px;
+    font-size: 8px;
   }
 }
