--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,13 @@ span {
     width: 10%;
     height: auto;
   }
+  
+   span {
+    display: inline-block;
+    width: 100%;
+    overflow: hidden;
+    font-size: 1.3vh !important;
+  }
 
   img {
     width: 10%;
